[package]
name = "miniprint"
version = "0.1.0"
edition = "2021"

[dependencies]
escpos = { version = "0.13.0", default-features = false, features = ["graphics"] }
jiff = { version = "0.1.13", default-features = false, features = ["serde", "std"] }
resvg = "0.44.0"
serde = { version = "1.0.210", features = ["derive"] }
textwrap = "0.16.1"
unicode-width = "0.2.0"
ureq = { version = "2.10.1", features = ["json"] }
